# rag-yt-transcription

./: .gitignore  README.md  main.py  pyproject.toml  rag.ipynb  requirements.txt
